--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="terms">
         This Agreement is a financial services and an end-user licence agreement between you and iLoan International Limited of a company duly incorporated under the laws of the Federal Republic of Nigeria with a company registration number CPR/2015/183658
-        iLoan reviews your credit report and requests for confidential informations such as BVN, account details. This Agreement sets out the complete terms and conditions which shall be applicable to the Account opened by you with BIL. These Terms and Conditions and any amendments or variations thereto take effect on their date of publication.
+        iLoan reviews all your credit report and requests for confidential informations such as BVN, account details. This Agreement sets out the complete terms and conditions which shall be applicable to the Account opened by you with BIL. These Terms and Conditions and any amendments or variations thereto take effect on their date of publication.
 
 
 
